--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,4 +14,68 @@
  *= require_self
  */
 
- 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
+
+
+body {
+  background-color: #eee;
+}
+
+.header {
+  font-size: 80px;
+  font-family: 'Bebas Neue', cursive;
+  color: orange;
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  background-color: rgba(255, 255, 255, 0.986);
+  text-shadow: black 1px 1px;
+ box-shadow: 0.3em 0.3em 1em rgba(0,0,0,0.3);
+}
+
+#nav {
+  position: absolute; 
+  top: 4.5px; 
+  right: 5px; 
+  width: 100px; 
+  line-height: 2.7;
+
+  /* background-color: #f78c25;
+  border-color: #b78142;
+  color: rgb(100%,100%,100%);
+  box-sizing: border-box;
+  margin: 8px;
+  padding: 0.35em 0.8em;
+  font-weight: 500;
+  text-align: center;
+  line-height: 1.25;
+  font-size: inherit;
+  font-weight: 500;
+  line-height: 1.25;
+  text-decoration: none;
+  border-radius: .5625em;
+  cursor: pointer;
+  transition: 120ms background-color ease-out; */
+  
+}
+
+.button {
+  background-color: #f78c25;
+  border-color: #b78142;
+  color: rgb(100%,100%,100%);
+  box-sizing: border-box;
+  margin: 8px;
+  padding: 0.35em 0.8em;
+  font-weight: 500;
+  text-align: center;
+  line-height: 1.25;
+  font-size: inherit;
+  font-weight: 500;
+  line-height: 1.25;
+  text-decoration: none;
+  border-radius: .5625em;
+  cursor: pointer;
+  transition: 120ms background-color ease-out;
+  }
