--- a/app/assets/stylesheets/api/user_auth.css
+++ b/app/assets/stylesheets/api/user_auth.css
@@ -7,7 +7,8 @@
   font-size: 28px;
   min-height: 60vh; 
   display: flex;
-    justify-content: center;
+  justify-content: center;
+  flex-direction: column ;
   align-items: center;
 }
 
@@ -18,7 +19,7 @@ div .form {
   border-color: black; */
   /* border-radius: 10px; */
   color: #555;
-  height: 390px;
+  height: 400px;
   width: 470px;
   background: rgba(255, 255, 255, 0.986);
   padding: 50px;
@@ -41,6 +42,17 @@ div .form {
   padding: 8px;
   font-size: 18px;
   color: orange;
+  text-shadow: black 0.3px 0.3px;
+  text-decoration: underline;
+}
+
+#redirect-none {
+  color: #555;
+  font-size: 18px;
+}
+
+#redirect:hover {
+  color: #e27723;
 }
 
 #input-field {
@@ -54,6 +66,33 @@ div .form {
   line-height: 1.8;
   background: rgb(100%,100%,100%);
   transition: padding .1s ease-out,border-color .1s ease-out;
+}
+
+
+#input-field2 {
+  box-sizing: border-box;
+  height: 2em;
+  padding: .8em 1em;
+  margin: 8px;
+  width: 100%;
+  border: .1em solid #a5a2a2;
+  font-size: 1em;
+  line-height: 1.8;
+  background: rgb(100%,100%,100%);
+  transition: padding .1s ease-out,border-color .1s ease-out;
+}
+
+#input-field:hover {
+  border: .1em solid orange;
+}
+
+#input-field:hover::placeholder { 
+  color: orange;
+}
+
+.auth-error {
+  text-decoration: none;
+  color: red;
 }
 
 
