--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,6 +23,14 @@ body {
   background-color: #eee;
 }
 
+header {
+  background-color: rgba(255, 255, 255, 0.986);
+  display: flex;
+  justify-content: center;
+    box-shadow: 0.3em 0.3em 1em rgba(0,0,0,0.3);
+
+}
+
 .header {
   font-size: 80px;
   font-family: 'Bebas Neue', cursive;
@@ -32,7 +40,12 @@ body {
   text-decoration: none;
   background-color: rgba(255, 255, 255, 0.986);
   text-shadow: black 1px 1px;
- box-shadow: 0.3em 0.3em 1em rgba(0,0,0,0.3);
+  height: 100%;
+  width: 350px;
+}
+
+.header:hover {
+  color: #e27723;
 }
 
 #nav {
@@ -41,23 +54,6 @@ body {
   right: 5px; 
   width: 100px; 
   line-height: 2.7;
-
-  /* background-color: #f78c25;
-  border-color: #b78142;
-  color: rgb(100%,100%,100%);
-  box-sizing: border-box;
-  margin: 8px;
-  padding: 0.35em 0.8em;
-  font-weight: 500;
-  text-align: center;
-  line-height: 1.25;
-  font-size: inherit;
-  font-weight: 500;
-  line-height: 1.25;
-  text-decoration: none;
-  border-radius: .5625em;
-  cursor: pointer;
-  transition: 120ms background-color ease-out; */
   
 }
 
@@ -78,4 +74,15 @@ body {
   border-radius: .5625em;
   cursor: pointer;
   transition: 120ms background-color ease-out;
+  }
+
+  .button:hover {
+    background-color: #e27723;
+  }
+
+  .error-page {
+    display: flex;
+    justify-content: center;
+    font-size: 50px;
+    margin-top: 20px;
   }
