--- a/app/assets/stylesheets/api/user_auth.css
+++ b/app/assets/stylesheets/api/user_auth.css
@@ -6,10 +6,13 @@
   font-family: 'Open Sans', sans-serif;
   font-size: 28px;
   min-height: 60vh; 
-  display: flex;
+  position: absolute;
+  left:50%;
+  margin-left:-235px;
+  top: 200px;
+  /* display: flex;
   justify-content: center;
-  flex-direction: column ;
-  align-items: center;
+  align-items: center; */
 }
 
 div .form {
@@ -19,7 +22,7 @@ div .form {
   border-color: black; */
   /* border-radius: 10px; */
   color: #555;
-  height: 400px;
+  height: 450px;
   width: 470px;
   background: rgba(255, 255, 255, 0.986);
   padding: 50px;
@@ -28,7 +31,6 @@ div .form {
   box-shadow: 0 0.0625rem 0 0 #eae8e8; 
   border: .1rem solid #c1c0c0;
   box-sizing: border-box;
-
 
 }
 
@@ -42,7 +44,7 @@ div .form {
   padding: 8px;
   font-size: 18px;
   color: orange;
-  text-shadow: black 0.3px 0.3px;
+  /* text-shadow: black 0.3px 0.3px; */
   text-decoration: underline;
 }
 
@@ -103,14 +105,25 @@ div .form {
   color: rgb(197, 29, 29);
   background: rgba(255, 255, 255, 0.986);
   padding: 20px;
-  position: relative;
-  text-align: center;
   box-shadow: 0 0.0625rem 0 0 #eae8e8; 
   border: .1rem solid #c1c0c0;
   box-sizing: border-box;
   border-radius: 12px;
+  font-size: 15px;
 }
 
+#placeholder {
+  display: flex;
+  justify-content: left;
+  font-size: 18px;
+}
+
+.organize {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
 
 
 
