--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -59,7 +59,7 @@ header {
 
 .button {
   background-color: #f78c25;
-  border-color: #b78142;
+  border-color: #f7f5f4;
   color: rgb(100%,100%,100%);
   box-sizing: border-box;
   margin: 8px;
@@ -74,6 +74,11 @@ header {
   border-radius: .5625em;
   cursor: pointer;
   transition: 120ms background-color ease-out;
+  }
+
+  .button:focus{
+    outline: none;
+    box-shadow: none;
   }
 
   .button:hover {
