--- a/app/assets/stylesheets/api/user_auth.css
+++ b/app/assets/stylesheets/api/user_auth.css
@@ -116,6 +116,8 @@ div .form {
   display: flex;
   justify-content: left;
   font-size: 18px;
+  margin-left: 8px;
+  color: #7b727e;
 }
 
 .organize {
