--- a/app/assets/stylesheets/api/animes.scss
+++ b/app/assets/stylesheets/api/animes.scss
@@ -4,28 +4,61 @@
 
 
 .thumbnail {
-    width: 127px;
-    display: block;
-    background: #fff;
-    padding: 12px;
-    margin: 12px;
-    position: relative;
-    cursor: pointer;
-    text-decoration: none;
-    display: flex;
-    justify-content: center;
-
+ 
+  cursor: pointer;
+  margin: 18px;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex: 1 0 21%;
+  border-style: rgb(87, 86, 86) solid;
+  align-items: center;
+  border-width: 0.5px;
+  background-color: #eee;
+  opacity: 1;
 }
 
 .thumbnail:hover {
-  background-color: rgb(224, 224, 224);
+  background-color: white;
+  box-shadow: 0 1px 1px black;
 }
 
 .thumbnails {
   display: flex;
   justify-content: center;
-  margin-right: 250px;
-  margin-left: 250px;
-  background-color: rgb(224, 223, 223);
+  align-items: center;
+  margin-right: 20%;
+  margin-left: 20%;
+  background-color: rgba(224, 223, 223, 0.5);
   margin-top: 50px;
+  flex-wrap: wrap;
+}
+
+.image {
+  width: 198px;
+  height: 300px;
+  margin: 15px;
+}
+
+.image-text {
+  margin-top: 10px;
+  margin-bottom: 15px;
+  font-weight: bold;
+}
+
+// #example2 {
+//   background-position: center top;
+//   background: url(background1.jpg);
+//   // background-repeat: no-repeat;
+//   // background-size: 100% 100%;
+//   background-size: auto 100%;
+// }
+
+body {
+  background-image: url('background1.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: 100% 100%;
 }
