--- a/app/assets/stylesheets/api/animes.scss
+++ b/app/assets/stylesheets/api/animes.scss
@@ -45,6 +45,7 @@
   margin-top: 10px;
   margin-bottom: 15px;
   font-weight: bold;
+  font-family: sans-serif;
 }
 
 // #example2 {
@@ -61,4 +62,17 @@ body {
   background-attachment: fixed;
   background-position: center;
   background-size: 100% 100%;
+}
+
+.header-image {
+  height: 250px;
+  width: 1000px;
+  margin-top: 30px;
+  background-color: white;
+}
+
+.anime-div {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
