--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -54,7 +54,14 @@ header {
   right: 5px; 
   width: 100px; 
   line-height: 2.7;
-  
+}
+
+#anime {
+  position: absolute; 
+  top: 4.5px; 
+  right: 125px; 
+  width: 100px; 
+  line-height: 2.7;
 }
 
 .button {
@@ -90,6 +97,5 @@ header {
     justify-content: center;
     font-size: 50px;
     margin-top: 20px;
-    
   }
 
