--- a/app/assets/stylesheets/api/animes.scss
+++ b/app/assets/stylesheets/api/animes.scss
@@ -4,7 +4,7 @@
 
 
 .thumbnail {
- 
+  color: black;
   cursor: pointer;
   margin: 18px;
   text-decoration: none;
@@ -17,6 +17,7 @@
   border-width: 0.5px;
   background-color: #eee;
   opacity: 1;
+  text-align: center;
 }
 
 .thumbnail:hover {
@@ -32,8 +33,9 @@
   margin-right: 20%;
   margin-left: 20%;
   background-color: rgba(224, 223, 223, 0.5);
-  margin-top: 50px;
+  margin-top: 20px;
   flex-wrap: wrap;
+  text-decoration: none;
 }
 
 .image {
@@ -46,9 +48,10 @@
   margin-top: 10px;
   margin-bottom: 15px;
   font-weight: bold;
-  font-family: sans-serif;
+  font-family: "Helvetica Neue",Arial,sans-serif;
   margin-left: 5px;
   margin-right: 5px;
+  width: 198px;
 }
 
 // #example2 {
@@ -68,20 +71,49 @@ body {
 }
 
 .header-image {
+  display: relative;
   height: 250px;
   width: 1000px;
-  margin-top: 30px;
+  margin-top: 40px;
   cursor: pointer;
   border-style: rgb(87, 86, 86) solid;
 }
 
 .header-image:hover {
-  box-shadow: 0 1px 1px black;
-  transform: scale(1.03);
+  box-shadow: 0 3px 3px black;
+  // transform: scale(1.03);
 }
 
 .anime-div {
   display: flex;
   align-items: center;
   flex-direction: column;
+  position: relative;
 }
+
+  .header-text {
+    position: absolute;
+    top: 100px;
+    right: 700px;
+    color: rgb(226, 137, 19);
+    font-size: 45px;
+    font-weight: 700;
+    text-shadow: 1px 1px #000000;
+    font-family: "Helvetica Neue",Arial,sans-serif;
+  }
+
+  .anime-heading {
+    color: rgb(0, 0, 0);
+    font-size: 45px;
+    font-weight: 700;
+    text-shadow: 1px 1px #000000;
+    font-family: "Helvetica Neue",Arial,sans-serif;
+    margin-left: 22%;
+    margin-top: 30px;
+  }
+
+  .line {
+    border: 1px solid black;
+    margin-left: 18%;
+    margin-right: 18%;
+  }
