--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,4 @@
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -92,10 +93,42 @@ header {
     background-color: #e27723;
   }
 
+  .navi-button {
+    box-sizing: border-box;
+    margin: 8px;
+    padding: 0.35em 0.8em;
+    font-weight: 500;
+    text-align: center;
+    line-height: 1.25;
+    font-size: inherit;
+    font-weight: 500;
+    line-height: 1.25;
+    text-decoration: none;
+    border-radius: .5625em;
+    cursor: pointer;
+    transition: 120ms background-color ease-out;
+  }
+
+    .navi-button:focus{
+    outline: none;
+    box-shadow: none;
+  }
+
+    .navi-button:hover {
+    background-color: #e27723;
+    color: white;
+  }
+
+  .selected {
+      color: orange;
+  }
+
   .error-page {
     display: flex;
     justify-content: center;
     font-size: 50px;
     margin-top: 20px;
   }
+
+
 
