--- a/app/assets/stylesheets/api/animes.scss
+++ b/app/assets/stylesheets/api/animes.scss
@@ -54,14 +54,6 @@
   width: 198px;
 }
 
-// #example2 {
-//   background-position: center top;
-//   background: url(background1.jpg);
-//   // background-repeat: no-repeat;
-//   // background-size: 100% 100%;
-//   background-size: auto 100%;
-// }
-
 body {
   background-image: url('background1.jpg');
   background-repeat: no-repeat;
@@ -81,7 +73,6 @@ body {
 
 .header-image:hover {
   box-shadow: 0 3px 3px black;
-  // transform: scale(1.03);
 }
 
 .anime-div {
@@ -91,29 +82,139 @@ body {
   position: relative;
 }
 
-  .header-text {
-    position: absolute;
-    top: 100px;
-    right: 700px;
-    color: rgb(226, 137, 19);
-    font-size: 45px;
-    font-weight: 700;
-    text-shadow: 1px 1px #000000;
-    font-family: "Helvetica Neue",Arial,sans-serif;
-  }
+.header-text {
+  position: absolute;
+  top: 100px;
+  right: 700px;
+  color: rgb(226, 137, 19);
+  font-size: 45px;
+  font-weight: 700;
+  text-shadow: 1px 1px #000000;
+  font-family: "Helvetica Neue",Arial,sans-serif;
+}
 
-  .anime-heading {
-    color: rgb(0, 0, 0);
-    font-size: 45px;
-    font-weight: 700;
-    text-shadow: 1px 1px #000000;
-    font-family: "Helvetica Neue",Arial,sans-serif;
-    margin-left: 22%;
-    margin-top: 30px;
-  }
+.anime-heading {
+  color: rgb(0, 0, 0);
+  font-size: 45px;
+  font-weight: 700;
+  text-shadow: 1px 1px #000000;
+  font-family: "Helvetica Neue",Arial,sans-serif;
+  margin-left: 22%;
+  margin-top: 30px;
+}
 
-  .line {
-    border: 1px solid black;
-    margin-left: 18%;
-    margin-right: 18%;
-  }
+.line {
+  border: 1px solid black;
+  margin-left: 18%;
+  margin-right: 18%;
+}
+
+.episode-list-container {
+  position: absolute;
+  left: 235px;
+  top: 430px;
+}
+
+.episode-list-name {
+  font-size: 30px;
+  font-weight: bold;
+  font-family: "Helvetica Neue",Arial,sans-serif;
+  margin-left: 40px;
+}
+
+.episode-line {
+  border: 0.4px solid grey;
+  width: 880px;
+  margin-bottom: 10px;
+  margin-top: 15px;
+}
+
+.anime-show-container {
+  display: flex;
+  justify-content: space-around;
+  margin-right: 12%;
+  margin-left: 12%;
+  margin-top: 30px;
+  background-color: rgba(242,242,242, 0.9);
+  margin-bottom: 120px;
+  padding-bottom: 200px;
+}
+
+
+.anime-episode-list {
+  display: flex;
+  flex-wrap: wrap;
+  text-decoration: none;
+  margin-top: 105px;
+  margin-left: 20px;
+}
+
+.episode-item {
+  color: black;
+  margin-right: 10px;
+  margin-left: 10px;
+  margin-top: 4px;
+  text-decoration: none;
+  background-color: white;
+  height: 200px;
+  width: 200px;
+  align-items: center;
+  box-shadow: 0 0.0625rem 0 0 #eae8e8; 
+  border: .1rem solid #c1c0c0;
+  box-sizing: border-box;
+  opacity: 1;
+  text-align: center;
+}
+
+.episode-video {
+  margin-top: 10px;
+}
+
+.episode-item-text {
+  font-weight: bold;
+  font-family: "Helvetica Neue",Arial,sans-serif;
+  line-height: 1.2;
+}
+
+.anime-show-description {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-right: 25px;
+}
+
+.anime-show-image {
+  width: 330px;
+  height: 500px;
+  margin-top: 28px;
+  margin-bottom: 15px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+}
+
+.anime-title {
+  font-size: 20px;
+  font-weight: bold;
+  font-family: "Helvetica Neue",Arial,sans-serif;
+}
+
+.anime-show-line {
+  border: 0.4px solid grey;
+  width: 330px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.anime-show-text {
+  margin-top: 10px;
+  margin-bottom: 15px;
+  font-weight: bold;
+  font-family: "Helvetica Neue",Arial,sans-serif;
+  margin-left: 5px;
+  margin-right: 5px;
+  width: 330px;
+  line-height: 1.2;
+  text-indent: 40px;
+}
