Add episode component

--- a/app/assets/stylesheets/api/animes.scss
+++ b/app/assets/stylesheets/api/animes.scss
@@ -198,6 +198,8 @@ body {
   font-size: 20px;
   font-weight: bold;
   font-family: "Helvetica Neue",Arial,sans-serif;
+  line-height: 1.2;
+  text-align: center;
 }
 
 .anime-show-line {
@@ -218,3 +220,29 @@ body {
   line-height: 1.2;
   text-indent: 40px;
 }
+
+.video-margin {
+  margin-bottom: 10px;
+}
+
+.episode-show-item-container {
+  display: flex;
+  // justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  margin-right: 5%;
+  margin-left: 5%;
+  margin-top: 30px;
+  background-color: rgba(242,242,242, 0.9);
+  margin-bottom: 120px;
+  padding-bottom: 100px;}
+
+  .episode-show-item-title {
+    margin-top: 20px;
+    margin-bottom: 40px;
+    font-size: 50px;
+    font-weight: bold;
+    font-family: "Helvetica Neue",Arial,sans-serif;
+    line-height: 1.2;
+    text-align: center;
+  }
