--- a/app/assets/stylesheets/api/animes.scss
+++ b/app/assets/stylesheets/api/animes.scss
@@ -58,13 +58,13 @@
   padding-bottom: 100px;
 }
 
-p a {
+.anime-episode-list a {
   height: 205px;
 }
 
-div a {
+// div a {
   // width: ;
-}
+// }
 
 .image {
   width: 198px;
@@ -80,6 +80,7 @@ div a {
   margin-left: 5px;
   margin-right: 5px;
   width: 198px;
+  font-size: 20px;
 }
 
 .anime-video-amount {
