--- a/app/assets/stylesheets/api/animes.scss
+++ b/app/assets/stylesheets/api/animes.scss
@@ -114,6 +114,7 @@ body {
 
 .header-image:hover {
   box-shadow: 0 3px 3px black;
+  transform: scale(1.01);
 }
 
 .anime-div {
@@ -125,9 +126,9 @@ body {
 
 .header-text {
   position: absolute;
-  top: 100px;
+  top: 50px;
   right: 700px;
-  color: rgb(226, 137, 19);
+  color: rgb(0, 0, 0);
   font-size: 45px;
   font-weight: 700;
   text-shadow: 1px 1px #000000;
@@ -298,3 +299,4 @@ body {
     line-height: 1.2;
     text-align: center;
   }
+
