Align anime index title

--- a/app/assets/stylesheets/api/animes.scss
+++ b/app/assets/stylesheets/api/animes.scss
@@ -56,6 +56,7 @@
   justify-content: center;
   align-items: center;
   padding-bottom: 100px;
+  // flex-direction: column;
 }
 
 .anime-episode-list a {
@@ -107,7 +108,7 @@ body {
   display: relative;
   height: 250px;
   width: 1000px;
-  margin-top: 40px;
+  // margin-top: 40px;
   cursor: pointer;
   border-style: rgb(87, 86, 86) solid;
 }
@@ -122,6 +123,7 @@ body {
   align-items: center;
   flex-direction: column;
   position: relative;
+  margin-top: 40px;
 }
 
 .header-text {
@@ -141,14 +143,23 @@ body {
   font-weight: 700;
   text-shadow: 1px 1px #000000;
   font-family: "Helvetica Neue",Arial,sans-serif;
-  margin-left: 22%;
+  margin-right: 45%;
   margin-top: 30px;
 }
 
 .line {
   border: 1px solid black;
-  margin-left: 18%;
-  margin-right: 18%;
+  // margin-left: 18%;
+  // margin-right: 18%;
+  width: 1150px;
+}
+
+.anime-index-title {
+  // position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .episode-list-container {
@@ -300,3 +311,41 @@ body {
     text-align: center;
   }
 
+  .queue-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .button-title {
+    font-family: "Helvetica Neue",Arial,sans-serif;
+    color:rgb(0, 0, 0);
+    // margin-top: -15%;
+    // width: 50px;
+  }
+
+  hgroup a {
+    display: flex;
+    // justify-content: center;
+    // align-items: center;
+  }
+
+  // hgroup p:hover {
+  //   color: #f78c25;
+  // }
+
+  hgroup a:hover {
+    // transform: scale(1.09);
+    // color: #f78c25;
+    p{
+      // z-index: 1;
+      // width: 50px;
+      // transform: scale(1.09);
+      // background-color: #f78c25;
+    }
+    img{
+      // transform: scale(1.09);
+      // background-color: #f78c25;
+    }
+  }
