--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,7 +37,7 @@ header {
 .header-title {
   font-size: 80px;
   font-family: 'Bebas Neue', cursive;
-  color: #f47521;
+  color: #f78c25;
   display: flex;
   justify-content: center;
   text-decoration: none;
@@ -46,9 +46,10 @@ header {
   height: 100%;
   width: 350px;
   text-align: center;
+  
 }
 
-.header:hover {
+.header-title:hover {
   color: #e27723;
 }
 /* 
@@ -61,21 +62,22 @@ header {
 
 } */
 
-/* #bookmark {
-  position: absolute; 
-  top: 4.5px; 
-  right: 125px; 
-  width: 100px; 
-  line-height: 2.7;
+#bookmark {
+  /* position: absolute;  */
+  /* top: 4.5px;  */
+  /* right: 125px;  */
+  /* width: 50px;  */
+  /* line-height: 2.7; */
+  /* height: 50px; */
 }
 
-#anime {
+/* #anime {
   position: absolute;
   top: 4.5px;
   right: 245px;
   width: 100px;
   line-height: 2.7;
-} */
+}  */
 
 .button {
   background-color: #f78c25;
@@ -149,17 +151,54 @@ header {
     padding-left: 8%;
     padding-right: 3%;
     /* margin: auto; */
+    margin-top: 4px;
   }
 
   .seperate-buttons {
     display: flex;
-    flex-direction: row;
-    margin-right: 5px;
-    padding-left: 5px;
+    margin-right: 10px;
+    padding-left: 10px;
+    align-items: flex-end;
+    margin-bottom: 6px;
   }
 
   .center-header {
     display: flex;
     justify-content: center;
     flex-direction: row;
+  }
+
+    .queue-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-left: 10px;
+  }
+
+  .queue-button svg{
+    fill: rgb(141, 141, 141);
+  }
+
+  /* .logout-button {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 20%;
+  } */
+
+  #logout-image {
+    margin-left: 10px;
+    margin-bottom: 5px;
+  }
+
+  .button-title {
+    font-family: "Helvetica Neue",Arial,sans-serif;
+    color:rgb(141, 141, 141);
+    /* margin-top: -15%;
+    width: 50px; */
   }
