--- a/app/assets/stylesheets/api/bookmarks.scss
+++ b/app/assets/stylesheets/api/bookmarks.scss
@@ -1,3 +1,90 @@
 // Place all the styles related to the api/bookmarks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.bookmark-index {
+  // display: flex;
+  // justify-content: center;
+  // flex-direction: column;
+  // align-items: center;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 20px;
+  margin-right: 15%;
+  margin-left: 15%;
+  width: 100%;
+  background-color: rgba(224, 223, 223, 0.5);
+  margin-top: 20px;
+  text-decoration: none;
+  padding: 20px;
+}
+
+.bookmark-thumbnail {
+  color: black;
+  cursor: pointer;
+  // margin: 18px;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  // flex-direction: row;
+  // flex: 1 0 21%;
+  border-style: rgb(87, 86, 86) solid;
+  // align-items: center;
+  border-width: 0.5px;
+  background-color: #eee;
+  // opacity: 1;
+  // text-align: center;
+  padding: 20px;
+}
+
+.bookmark-thumbnail:hover {
+  background-color: white;
+  box-shadow: 0 1px 1px black;
+  img{
+    transform: scale(1.03);
+  }
+  // transform: scale(1.03);
+  .bookmark-image-text {
+    color: #0a6da4;
+  }
+}
+
+.bookmark-image-text {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-weight: 700;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  margin-left: 20px;
+  margin-right: 5px;
+  // width: 198px;
+  font-size: 30px;
+}
+
+.bookmark-image {
+  width: 198px;
+  height: 300px;
+  margin: 15px;
+  border: 2px solid black;
+}
+
+.bookmark-synopsis {
+  margin-top: 10px;
+  margin-bottom: 15px;
+  font-weight: bold;
+  font-family: "Helvetica Neue",Arial,sans-serif;
+  margin-left: 20px;
+  margin-right: 20px;
+  // width: 330px;
+  line-height: 1.2;
+  // text-indent: 40px;
+  font-size: 18px;
+}
+
+.bookmark-amount {
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  color: grey;
+  margin-left: 20px;
+  margin-bottom: 25px;
+  font-size: 20px;
+}
