Finish search bar

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -4,5 +4,5 @@
   		user: current_user).html_safe %>
   </script>
 <% end %>
-
+<script src="https://kit.fontawesome.com/eed3a7214a.js" crossorigin="anonymous"></script>
 <main id="root"></main>
