--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -202,3 +202,50 @@ header {
     /* margin-top: -15%;
     width: 50px; */
   }
+
+  .search-bar-div {
+    height: 70px;
+    /* width: 100%; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-self: center;
+    /* text-align: center; */
+    /* flex-direction: column; */
+  }
+
+  .search-bar-div input{
+    font-size: 20px;
+    margin-left: 10px;
+    height: 40px;
+    border-color: rgb(141, 141, 141);
+    border-radius: 8px;
+    text-indent: 5px;
+  }
+
+  .search-bar-div input:focus {
+  /* outline-color: rgb(141, 141, 141); */
+  outline: none;
+  }
+
+  .search-bar-div input:hover {
+    border-color: #f78c25;
+  }
+
+  .fab-icons {
+  color: rgb(141, 141, 141);
+  align-self: center;
+  font-size: 45px;
+  padding: 10px;
+  }
+
+  .fab-icons:hover {
+    color: #f78c25;
+  }
+
+  .fab-icons-ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
