--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
     <%= javascript_include_tag 'application' %>
+    <meta property="og:title" content="Dragon Roll" />
+    <meta property='og:image' content="<%= image_url('home_page.png') %>"/>
+    <meta property="og:description"
+      content="Dragon Roll is a clone of the site, 'crunchyroll.com'. Users are able to stream, queue, and search for their favorite anime."
+    />
+    <meta property="og:url"
+      content="http://dragonroll-anime.herokuapp.com/"
+    />
 
   </head>
 
